--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,10 @@ dependencies = [
     "python-dotenv (>=1.2.1,<2.0.0)",
     "django-filter (>=25.2,<26.0)",
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
-    "coverage (>=7.12.0,<8.0.0)"
+    "coverage (>=7.12.0,<8.0.0)",
+    "drf-yasg (>=1.21.11,<2.0.0)",
+    "django-cors-headers (>=4.9.0,<5.0.0)",
+    "requests (>=2.32.5,<3.0.0)"
 ]
 
 
