--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0"
 dependencies = [
     "django (>=5.2.8,<6.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
@@ -18,7 +18,11 @@ dependencies = [
     "coverage (>=7.12.0,<8.0.0)",
     "drf-yasg (>=1.21.11,<2.0.0)",
     "django-cors-headers (>=4.9.0,<5.0.0)",
-    "requests (>=2.32.5,<3.0.0)"
+    "requests (>=2.32.5,<3.0.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "redis (>=7.1.0,<8.0.0)",
+    "eventlet (>=0.40.4,<0.41.0)",
+    "django-celery-beat (>=2.8.1,<3.0.0)"
 ]
 
 
